fix sidebar inner div scrollbar (#6499)

--- a/src/Sidebar/Sidebar.st.css
+++ b/src/Sidebar/Sidebar.st.css
@@ -182,6 +182,10 @@
   animation-name: outToRight;
 }
 
+.childrenContent {
+  overflow: hidden;
+}
+
 .gradient {
   -st-states: skin(enum(dark, light));
 
